--- a/locales/en/index.json
+++ b/locales/en/index.json
@@ -75,7 +75,8 @@
     "name": "Name",
     "email": "Email",
     "tel": "Phone",
-    "agreement": "I accept the terms of the user agreement and the privacy policy",
+    "agreement_p1": "I accept the terms of the",
+    "agreement_p2": " user agreement and the privacy policy",
     "subscribe": "Submit",
     "required_name": "Name is required",
     "required_name_min": "Name must have at least 3 characters",
