--- a/locales/kk/index.json
+++ b/locales/kk/index.json
@@ -76,7 +76,8 @@
     "name": "Аты",
     "email": "Электрондық пошта",
     "tel": "Телефон",
-    "agreement": "Мен пайдаланушылық келісім шарттарын және құпиялылық саясатын қабылдаймын",
+    "agreement_p1": "Мен пайдаланушылық келісім шарттарын және",
+    "agreement_p2": " құпиялылық саясатын қабылдаймын",
     "subscribe": "Жіберу",
     "required_name": "Атыңызды енгізіңіз",
     "required_name_min": "Атау кемінде 3 таңбадан тұруы керек",
