--- a/locales/ru/index.json
+++ b/locales/ru/index.json
@@ -78,7 +78,8 @@
     "name": "Имя",
     "email": "Эл.адрес",
     "tel": "Телефон",
-    "agreement": "Я принимаю условия пользовательского соглашения и политику конфиденциальности",
+    "agreement_p1": "Я принимаю условия",
+    "agreement_p2": " пользовательского соглашения и политику конфиденциальности",
     "subscribe": "Отправить",
     "required_name": "Введите имя",
     "required_name_min": "Имя должно иметь минимум 3 символа",
