--- a/locales/kk/employees.json
+++ b/locales/kk/employees.json
@@ -25,7 +25,10 @@
     "title": "\"Ликвид\" деректердің қауіпсіздігіне қамқорлық жасайды"
   },
   "s4": { "title": "Жиі қойылатын сұрақтар" },
-  "s5": { "title": "Жұмыскер ретінде тіркеліңіз" },
+  "s5": {
+    "title": "Жұмыскер ретінде тіркеліңіз",
+    "desc": "Алдын ала кіруге тіркеу"
+  },
   "form": {
     "required": "Жолды толтырыңыз",
     "submitted": "Деректер жіберілді",
