--- a/locales/ru/employees.json
+++ b/locales/ru/employees.json
@@ -25,7 +25,10 @@
     "title": "«Ликвид» заботится о безопасности данных"
   },
   "s4": { "title": "Частые вопросы" },
-  "s5": { "title": "Регистрируйтесь как работник" },
+  "s5": {
+    "title": "Регистрируйтесь как работник",
+    "desc": "Зарегистрируйтесь для раннего доступа"
+  },
   "form": {
     "required": "Заполните поле",
     "submitted": "Данные отправлены",
